# ats-resume-checker

./: .gitignore  LICENSE  README.md  pyproject.toml
cvgrader/: __init__.py  cli.py  extract.py  match.py  parse.py  quality.py  report.py  score.py
docs/: app.js  data.js  grader.js  index.html
presets/: academic--daad-masters-scholarship.txt  academic--erasmus-exchange-semester.txt  academic--erasmus-mundus-masters.txt  academic--fulbright-scholarship.txt  academic--masters-program-cs.txt  academic--mba-program.txt  academic--phd-position-stem.txt  academic--research-lab-assistant-ai.txt  academic--summer-research-internship.txt  academic--university-teaching-assistant.txt  academic--wet-lab-research-assistant.txt  data-ai--data-analyst--intern.txt  data-ai--data-analyst--junior.txt  data-ai--data-analyst--mid.txt  data-ai--data-analyst--senior.txt  data-ai--data-analyst.txt  data-ai--data-engineer--intern.txt  data-ai--data-engineer--junior.txt  data-ai--data-engineer--mid.txt  data-ai--data-engineer--senior.txt  data-ai--data-engineer.txt  data-ai--data-scientist--intern.txt  data-ai--data-scientist--junior.txt  data-ai--data-scientist--mid.txt  data-ai--data-scientist--senior.txt  data-ai--data-scientist.txt  data-ai--machine-learning-engineer--intern.txt  data-ai--machine-learning-engineer--junior.txt  data-ai--machine-learning-engineer--mid.txt  data-ai--machine-learning-engineer--senior.txt  data-ai--machine-learning-engineer.txt  data-ai--ml-intern.txt  engineering--architect--intern.txt  engineering--architect--junior.txt  engineering--architect--mid.txt  (+98 more)
(+11 files in other folders)
